# MotorTester_v1.1

./: .gitignore  README.md
MotorConfugurator/: ARCHITECTURE.md  CMakeLists.txt
MotorConfugurator/docs/: SAFETY_AUDIT_MKS_MS_2026-04-28.md
MotorConfugurator/drivers/interfaces/ethercat/adapter/: ethercat_axis_adapter.cpp  ethercat_axis_adapter.h
MotorConfugurator/drivers/interfaces/ethercat/manager/: ethercat_runtime_factory.cpp
MotorConfugurator/drivers/interfaces/ethercat/manual_homing/: ethercat_manual_homing_state_machine.cpp  ethercat_manual_homing_state_machine.h
MotorConfugurator/drivers/interfaces/mks_can/adapter/: mks_axis_adapter.cpp  mks_axis_adapter.h  mks_runtime_config.cpp  mks_runtime_config.h  mks_runtime_factory.cpp
MotorConfugurator/drivers/interfaces/mks_can/axis/: mks_axis_configurator.cpp  mks_axis_configurator.h  mks_axis_state_cache.h  mks_axis_worker.cpp  mks_axis_worker.h  mks_homing_state_machine.cpp  mks_homing_state_machine.h
MotorConfugurator/hal_host_service/include/hal_host_service/: hal_host_service.h  runtime_queue_ingress.h
MotorConfugurator/hal_host_service/src/: hal_host_service.cpp
MotorConfugurator/hal_ipc/include/hal_ipc/: protocol.h  server.h
MotorConfugurator/hal_ipc/src/: protocol.cpp  server.cpp
MotorConfugurator/motion_core/include/motion_core/: axis_data.h  axis_interface.h  hal_runtime.h  parameter_id.h  types.h
MotorConfugurator/motion_core/src/: hal_runtime.cpp
MotorConfugurator/motion_core/src/config/: axis_config_json.cpp  hal_runtime_config_json.cpp
MotorConfugurator/ui/qt/mks/: Untitled-2  main_window.cpp  main_window.h  mks_all_axes_control_workspace.cpp  mks_all_axes_control_workspace.h
MotorTester_app/: CMakeLists.txt
MotorTester_app/.claude/: settings.json
MotorTester_app/apps/cli/: main.cpp
MotorTester_app/apps/qt/: qt_main.cpp
MotorTester_app/config/: runtime_config.sample.json
MotorTester_app/docs/: ARCHITECTURE.md  COMMAND_COVERAGE.md  mks_protocol_description.md  детальный implementation plan.md
MotorTester_app/drivers/interfaces/ethercat/: ethercat_logger.h  p100e_ethercat_dictionary.h
MotorTester_app/motion_core/: CMakeLists.txt  README.md
MotorTester_app/motion_core/include/motion_core/: axis_control_service.h  axis_data.h  axis_interface.h  hal_runtime.h  parameter_id.h  parameter_types.h  runtime_loop.h
MotorTester_app/motion_core/include/motion_core/config/: hal_runtime_config.h
MotorTester_app/motion_core/src/: axis_control_service.cpp  hal_runtime.cpp  runtime_loop.cpp
MotorTester_app/motion_core/src/config/: hal_runtime_config_json.cpp
MotorTester_app/ui/qt/mks/: axis_manager.cpp  axis_manager.h  axis_workspace.cpp  axis_workspace.h  main_window.cpp  main_window.h  sequencer_widget.cpp  sequencer_widget.h
(+48 files in other folders)
